--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "pom.xml",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "target" }
+      "src": "Dockerfile",
+      "use": "@vercel/docker"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "target/HelloWorld-1.0-SNAPSHOT.jar"
+      "dest": "/"
     }
   ]
 }
