--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,15 @@
-spring.application.name=HelloWorld
+spring.application.name=MYAPP-BOOKS
 
-logging.level.org.springframework=error
-
-server.port=8080
-
+# Configuration de la base de données H2
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
 
+# Configuration de JPA
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+# Console H2 activée pour consulter la base en développement
+spring.h2.console.enabled=true
